// 使用proto3语法，默认proto2
syntax = "proto3";

// 是否需要生成的类拆分为多个
option java_multiple_files = true;
// 生成的类所属的层级
option java_package = "ucenter.grpc.group";
option java_outer_classname = "GroupProto";
option objc_class_prefix = "UCENTER";

// 定义包名，避免命名冲突
package ucenter;

// 定义服务
service Group {
  rpc saveGroupPrivs (SaveGroupPrivsRequest) returns (SaveGroupPrivsResponse) {}
  rpc getGroupList (GetGroupListRequest) returns (GetGroupListResponse) {}
}

// 结构化数据：使用message定义。
// 字段类型 字段名 = 字段编号;
message GetGroupListRequest {
  string clientCode = 1;
}

message GetGroupListResponse {
  repeated GroupSchema groups = 1;
}

message SaveGroupPrivsRequest {
  OperatorSchema curUserInfo = 1;
  string clientCode = 2;
  repeated string modulePrivCodes = 3;
  string groupCode = 4;
}

message SaveGroupPrivsResponse {
  int32 count = 1;
}

message Tag {
  string key = 1;
  string value = 2;
}

message OperatorSchema {
  string userCode = 1;
  string realName = 2;
}

message GroupSchema {
  string groupCode = 1;
  string groupName = 2;
  int32 status = 3;
  uint32 authType = 4;
  repeated string modulePrivCodes = 5;
  string orgCode = 6;
  string description = 7;
  repeated string schemaCodes = 8;
  repeated Tag tags = 9;
}